Completed the generic component for Stacked Horizontal Bar with Custom Tiny Checkered SVG Pattern using ngx-charts

--- a/angular/ang-custom-svg-stack-horiz-bar/src/index.html
+++ b/angular/ang-custom-svg-stack-horiz-bar/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- <app-root></app-root> -->
-  <app-tiny-checkered-svg width="1900"></app-tiny-checkered-svg>
-  <!-- <app-stacked-horizontal-bar></app-stacked-horizontal-bar> -->
+  <!-- <app-tiny-checkered-svg width="1900"></app-tiny-checkered-svg> -->
+  <app-stacked-horizontal-bar></app-stacked-horizontal-bar>
 </body>
 </html>
